upgrade the laravel & swagger enabled
